--- a/registro.html
+++ b/registro.html
@@ -9,6 +9,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/output.css">
+    <style>
+      .font-family-base {
+  font-family: inherit !important;
+}
+    </style>
 </head>
 <body class="overflow-x-hidden">
 
@@ -42,9 +47,6 @@
                     <span class="absolute left-0 -bottom-1 w-0 h-[2px] bg-[#12b1be] transition-all duration-300 group-hover:w-full"></span>
                 </a>
                 <a href="#" class="relative group transition">Medicamentos
-                    <span class="absolute left-0 -bottom-1 w-0 h-[2px] bg-[#12b1be] transition-all duration-300 group-hover:w-full"></span>
-                </a>
-                <a href="#" class="relative group transition">Bienestar
                     <span class="absolute left-0 -bottom-1 w-0 h-[2px] bg-[#12b1be] transition-all duration-300 group-hover:w-full"></span>
                 </a>
                 <a href="#" class="relative group transition">Bebés
